excalidraw/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw-deployment
  namespace: simpletools
spec:
  replicas: 2
  selector:
    matchLabels:
      app: excalidraw
  template:
    metadata:
      labels:
        app: excalidraw
    spec:
      automountServiceAccountToken: false
      volumes:
        - name: excalidraw-data
          persistentVolumeClaim:
            claimName: excalidraw-pvc
      containers:
        - name: excalidraw
          image: excalidraw/excalidraw:latest # only latest is available
          ports:
            - containerPort: 80
          volumeMounts:
            - name: excalidraw-data
              mountPath: /opt/node_app/app
          resources:
            requests:
              memory: "20Mi"
              cpu: "10m"
              ephemeral-storage: "2Gi"
            limits:
              memory: "100Mi"
              cpu: "50m"
              ephemeral-storage: "10Gi"
